# Broad-apps

./: .env.example  Dockerfile  README.md  docker-compose.yml  prometheus.yml  pyproject.toml  requirements-test.txt
app/: main.py  settings.py
app/application/: pricing.py
app/application/common/: errors.py
app/application/ports/: provider.py  rate_limiter.py  repositories.py  unit_of_work.py
app/application/use_cases/: register_user.py  topup_balance.py
app/domain/: base.py  enums.py  events.py  generation.py  user.py  wallet.py
app/infrastructure/: circuit_breaker.py  db.py  metrics.py  models.py  outbox.py  provider_failover.py  provider_fal.py  rate_limit.py  redis.py  repos.py  uow.py  webhook_delivery.py
app/presentation/: api.py  deps.py  middleware.py  routes_auth.py  routes_generations.py  routes_payments.py  routes_users.py
app/tests/: conftest.py  dummy_provider.py  test_flow_happy.py  test_flow_refund.py  test_metrics.py  test_rate_limit.py  test_smoke.py  test_webhook_retry.py
app/workers/: tasks.py  worker.py
migrations/: env.py
migrations/versions/: 0001_init.py
